# DT046G

./: test.sln
Labb1/: DFS.cpp  DFS.h  Dijkstras.cpp  Matrix.cpp  reader.h  test.vcxproj
Labb2/: CMakeLists.txt  DataGenerate.cpp  DataGenerate.h  InsertionSort.cpp  InsertionSort.h  QuickSort.cpp  QuickSort.h  QuickSortMOT.cpp  QuickSortMOT.h  SelectionSort.cpp  SelectionSort.h  main.cpp
labb3/: CMakeLists.txt  DataGeneration.cpp  DataGeneration.h  Search.cpp  Search.h  main.cpp
test/: BFS.cpp  BFS.h  Dijkstras.h  Matrix.h  data.txt  main.cpp  reader.cpp  test.vcxproj.filters
